--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html lang="en">
   <head>
     <title>Excursion</title>
-    <link href="./resources/css/style.css" />
+    <link href="./resources/css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
+    <!-- Header content -->
+    <header class="header-content">
       <h1>Discover hidden places in the world around you</h1>
       <p><a href="#">Download Excursion (Coming soon!)</a></p>
+      <video src="./resources/video/excursion.mp4"></video>
     </header>
+
+    <!-- Main content -->
+    <section class="main-content">
+      <h2>Your personal travel guide</h2>
+      <p>
+        Excursion remembers places you like, and recommends new points of
+        interest around you.
+      </p>
+      <img src="./resources/images/camp.jpg" alt="Campsite" />
+    </section>
+
+    <!-- Footer content -->
+    <footer class="footer-content">
+      <img src="./resources/images/phone.png" alt="Mobile Icon" />
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+      <p>© Excursion</p>
+    </footer>
   </body>
 </html>
