--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <header class="header-content">
       <h1>Discover hidden places in the world around you</h1>
       <p><a href="#">Download Excursion (Coming soon!)</a></p>
-      <video src="./resources/video/excursion.mp4"></video>
+      <video autoplay loop muted playsinline preload="auto">
+        <source src="./resources/video/excursion.mp4" type="video/mp4" />
+        Sorry, your browser doesn't support embedded videos.
+      </video>
     </header>
 
     <!-- Main content -->
@@ -27,7 +30,7 @@
       <img src="./resources/images/phone.png" alt="Mobile Icon" />
       <h2>Coming Soon for iPhone and Android</h2>
       <p><a href="#">Download Excursion (Coming soon!)</a></p>
-      <p>© Excursion</p>
+      <p class="copywrite-info">© Excursion</p>
     </footer>
   </body>
 </html>
